--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,5 @@
 /* Import fonts */
+@import url('https://fonts.googleapis.com/css2?family=UnifrakturCook&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 /* Import Typekit fonts */
 @import url('https://use.typekit.net/kbv3wdg.css');
