--- a/src/pages/Shop/Shop.module.css
+++ b/src/pages/Shop/Shop.module.css
@@ -624,3 +624,10 @@
   font-style: italic;
   padding: 2rem 0;
 }
+
+.comingSoon {
+  text-align: center;
+  font-size: 1.5rem;
+  color: #888;
+  margin-top: 2rem;
+}
